Add sample output

--- a/google-colab-ssh.ipynb
+++ b/google-colab-ssh.ipynb
@@ -18,7 +18,11 @@
       "metadata": {
         "id": "HCHdsxzg9TE8",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b14e9e9a-c56b-4380-df90-5aa2c12919c2"
       },
       "source": [
         "# Change these two lines\n",
@@ -70,8 +74,16 @@
         "\n",
         "    print(\"Unable to open SSH.\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ssh root@0.tcp.ngrok.io -p 15337\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
